# OpenCAV-Metamoto

./: README.md
Autoware-SUT/: README.md
Autoware-SUT/Autoware/: Dockerfile.kinetic  Dockerfile.melodic  Makefile  notes  start.sh
Autoware-SUT/Autoware/catkin_ws/src/ros_sut/: CMakeLists.txt  package.xml
Autoware-SUT/Autoware/catkin_ws/src/ros_sut/src/: ._data_conversions.h  controller_service.cc  controller_service.h  data_conversions.cc  data_conversions.h  main.cc  map_client.cc  map_client.h
Autoware-SUT/Autoware/launch/: detection.launch  localization.launch  map.launch  mission_planning.launch  motion_planning.launch  params.yaml  rosbag_record.launch  sensing.launch  startup.launch
Autoware-SUT/Autoware/sut_connector/: Makefile  SUTConnectorClient.vcxproj  compile-protos.bat  incommon.crt  main.cc  map_service.cc  map_service.h  ray_tracer_service.cc  reporting_service.cc  scenario_service.cc  scenario_service.h  sut_connector_client.cc  sut_connector_client.h  system_service.cc  system_service.h  token.cc  token.h
MATLAB-ROS/: README.md
MATLAB-ROS/catkin_ws_docker/src/: gps_subscription.slx  gps_subscription.slxc  radar_subscription.slx  radar_subscription.slxc  radar_subscription_brake.slx  radar_subscription_brake.slxc  tester.mlx  tester.slx  tester.slxc
MATLAB-ROS/catkin_ws_docker/src/gps_msgs/: CMakeLists.txt
MATLAB-ROS/catkin_ws_docker/src/radar_msgs/: CMakeLists.txt
MATLAB-ROS/catkin_ws_docker/src/ros_sut/: CMakeLists.txt
NativeAPI/: README.md
NativeAPI/Native-API/: Dockerfile.cpp  Dockerfile.csharp  Dockerfile.getting-started  Dockerfile.python
NativeAPI/Native-API/Models/: account.ts  common.spec.ts  common.ts  create_vector_example.ts  interfaces.ts  package-lock.json  package.json  protos.d.ts  protos.js  test-case.ts  test-job.ts  test-run.ts  test-suite.ts  test-vector.ts  tsconfig.json
NativeAPI/Native-API/SUT/cpp/: Makefile  Reference.sln  Reference.vcxproj  Reference.vcxproj.filters  compile-protos.bat  controller_service.cc  controller_service.h  data_bus_client.cc  data_bus_client.h  main.cc  reporting_client.cc  reporting_client.h  sensor_parameters.cpp  sensor_parameters.h  sensor_service.cpp  sensor_service.h
NativeAPI/Native-API/SUT/csharp/: CSharpSUTs.csproj  DataBusClient.cs  Program.cs  RayTracerClient.cs  TestController.cs  TestSensor.cs  compile-protos.bat  compile-protos.sh
NativeAPI/Native-API/SUT/python/: Makefile  Radar.py  compile-protos.bat  databus_client.py  processor.py  reporting_client.py  vehicle_detector.py
NativeAPI/Native-API/Tools/IntegrationTester/: IntegrationTester.sln  IntegrationTester.vcxproj  IntegrationTester.vcxproj.filters  Makefile  compile-protos.bat  controller_client.cc  controller_client.h  data_bus_service.cc  data_bus_service.h  main.cc  sensor_client.cc  sensor_client.h
NativeAPI/Native-API/Tools/SUTConnector/: Makefile  reporting_service.h  version.h
ROS-SUT/: ._Readme.md  start.sh
ROS-SUT/devel/include/delphi_esr_msgs/: EsrStatus6.h  EsrStatus7.h  EsrStatus8.h
ROS-SUT/devel/include/delphi_mrr_msgs/: ActiveFaultLatched1.h  LrosOdometerValue.h  LrosVinPart1.h  SyncTimestamp.h  VehicleStateMsg1.h
ROS-SUT/devel/include/delphi_srr_msgs/: SrrStatus4.h
ROS-SUT/devel/include/derived_object_msgs/: ObjectArray.h
ROS-SUT/devel/include/kartech_linear_actuator_msgs/: ConfigureOutputsKdFreqDeadbandCmd.h  ConfigureOutputsPwmFreqCmd.h  MotorCurrentRpt.h  PositionCmd.h  PriorityConfigCmd.h  ReportIndex.h  ReportPollReq.h
ROS-SUT/devel/include/pacmod_msgs/: DetectedObjectRpt.h  MotorRpt1.h  RearLightsRpt.h  SteeringPIDRpt1.h  SteeringPIDRpt4.h
ROS-SUT/devel/lib/pkgconfig/: delphi_srr_msgs.pc  neobotix_usboard_msgs.pc  radar_msgs.pc
ROS-SUT/metamoto/: Makefile
ROS-SUT/metamoto/sut_connector/: ReadMe.md  SUTConnectorClient.vcxproj.filters  data_bus_service.cc  version.h
ROS-SUT/ros/: Dockerfile.kinetic  Readme.md  start-stack.sh
ROS-SUT/ros/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
ROS-SUT/ros/catkin_ws/src/ros_sut/: CMakeLists.txt
ROS-SUT/ros/catkin_ws/src/ros_sut/src/: data_bus_client.h  map_client.h  reporting_client.h
ROS-SUT/ros/metamoto/sut_connector/: Makefile  data_bus_service.h  ray_tracer_service.h
ROS-SUT/src/ros_sut/src/: map_client.cc  (+3 more)
(+1205 files in other folders)
